# privacy-policy-compliance-demo

./: README.md  demo-preview.html  docker-compose.yml
.github/workflows/: sync-to-hf.yml  sync-to-modelscope.yml
backend/: .gitignore  Dockerfile  download_models.py  main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  package.json  tailwind.config.js  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  utils.ts
hf-deploy/: Dockerfile  README.md  analyzer.py  app.py  config.py  mapper.py  models.py  requirements.txt
